[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
futures = "0.3"
derive_more = { version = "1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
actix-files = "0.6"
oauth2 = "4"
serde_json = "1"
jsonwebtoken = "9"
